[package]
name = "bevy_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_egui = "0.25.0"
bevy_xpbd_2d = "0.4.2"
bevy_xpbd_3d = "0.4.2"
strum = "0.26.1"
strum_macros = "0.26.1"
